[tool.poetry]
name = "cartopy_project_template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.22.3"
pandas = "^1.4.1"
matplotlib = "^3.5.1"
japanize-matplotlib = "^1.1.3"
seaborn = "^0.11.2"
scikit-learn = "^1.0.2"
pygrib = "^2.1.4"
Cartopy = "0.19.0.post1"
lxml = "^4.8.0"
html5lib = "^1.1"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"
jupyterlab = "^3.3.2"
jupyterlab-language-pack-ja-JP = "^3.3.post2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
